fix(src): mudanças versionamento

--- a/.github/workflows/dump.yml
+++ b/.github/workflows/dump.yml
@@ -1,36 +1,29 @@
 name: Bump Version and Publish
 
 on:
-  # O workflow será disparado ao fazer push na branch principal
   push:
     branches:
       - main
-    # 🚨 IMPORTANTE: Adicionado o filtro de "paths-ignore" para evitar loops infinitos!
-    # Se o workflow fizer um push, ele não deve re-disparar a si mesmo.
     paths-ignore:
       - 'package.json'
       - 'package-lock.json'
       - 'npm-shrinkwrap.json'
 
 jobs:
-  publish: # Renomeado de 'build' para 'publish' para refletir a ação principal
+  publish: 
     runs-on: ubuntu-latest
     
-    # 🌟 CORREÇÃO ESSENCIAL: Adicionar permissão de escrita para o GITHUB_TOKEN
-    # Isso permite que o bot faça 'git push' com as tags criadas.
     permissions:
-      contents: write # Permite push para o repositório e criação de tags/releases
+      contents: write 
       
     steps:
       - name: Checkout código
-        uses: actions/checkout@v4 # Atualizado para a versão mais recente
+        uses: actions/checkout@v4 
         with:
-          # Necessário para obter histórico completo e tags
           fetch-depth: 0
-          # Não precisa especificar o 'token', pois o GITHUB_TOKEN é usado por padrão e tem a permissão 'contents: write' acima.
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4 # Atualizado para a versão mais recente
+        uses: actions/setup-node@v4 
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
@@ -46,42 +39,35 @@ jobs:
       - name: Build do projeto
         run: npx tsc
         
-      # ⚠️ Recomenda-se mover a Análise SonarCloud para depois do 'Build' e antes do 'Bump'
       - name: Análise com SonarCloud
         uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         
-      - name: Bump de versão (minor) e Criação de Tag
+      - name: Bump de versão (minor)
         id: package_version
         run: |
-          # O comando 'npm version' automaticamente cria e checa o commit e a tag.
-          # A sintaxe 'VERSION=$(...) && echo ...' é mais robusta.
-          VERSION=$(npm version minor -m "ci: release %s [skip ci]")
+          VERSION=$(npm version minor --no-git-tag-version | tr -d 'v')
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
           
-          # NOTA: O comando 'npm version' já faz o 'git commit' e 'git tag'.
-          # Ele não precisa ser executado duas vezes.
-
       - name: Publicar no NPM
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-      - name: Push versão (main branch) e tags para o GitHub
-        # ⚠️ ESTE PASSO ERA O QUE ESTAVA FALHANDO SEM PERMISSÃO!
-        run: git push origin main --follow-tags
-        # Não precisa do token aqui, pois a permissão 'contents: write' foi dada ao job.
+      - name: Commit, Tag e Push versão para o GitHub
+        run: |
+          git add package.json
+          git commit -m "ci: release ${{ steps.package_version.outputs.version }} [skip ci]"
+          git tag "v${{ steps.package_version.outputs.version }}"
+          git push origin main --follow-tags
         
       - name: Apagar tags antigas
         run: |
-          # Obtém a tag mais recente (a última criada)
-          latest_tag=$(git describe --tags --abbrev=0) # Usando --abbrev=0 para obter a tag limpa
+          latest_tag=$(git describe --tags --abbrev=0)
           
           echo "Mantendo a tag mais recente: $latest_tag"
 
-          # Lista todas as tags e deleta as que não são a mais recente
-          # Nota: O uso de `git push --delete` requer a permissão de escrita, já concedida.
           for tag in $(git tag); do
             if [ "$tag" != "$latest_tag" ]; then
               git push --delete origin "$tag"
